Add custom right click drop down

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
             <input type="text" name="new_folder" value="New Folder"
                 style="background-color: transparent; border: none; font-size: 12px;">
         </form>
+        
+        
+        <div id="menu">
+            <hr />
+            <a href="#">
+                <i class="fa fa-fort-awesome"></i> New Folder <span>Ctrl + ?!</span>
+            </a>
+            <!-- <hr /> -->
+        </div>
+
     </div>
     <!-- <form id="folder-name" onsubmit="renameFolder(e)">
         <input type="text" name="new_folder" value="New Folder" style="background-color: transparent; border: none; font-size: 12px;">
