Generate new element from right click dropdown

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
                 style="background-color: transparent; border: none; font-size: 12px;">
         </form>
         
-        
         <div id="menu">
             <hr />
-            <a href="#">
-                <i class="fa fa-fort-awesome"></i> New Folder <span>Ctrl + ?!</span>
+            <a onclick="newFolder()">
+                <i class="fa fa-folder" ></i> New Folder <span>Ctrl + ?!</span>
             </a>
             <!-- <hr /> -->
         </div>
