--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="modal-container"></div>
     <div id="folder">
         <div id="folder-itself">
             <!-- <img class="image" src="https://p1.hiclipart.com/preview/823/364/42/folder-replacement-yellow-folder-icon-png-clipart.jpg" style="max-width: 100%"> -->
@@ -33,6 +34,7 @@
     </div>
 
     <script src="src/folder.js"></script>
+    <script src="src/folderModal.js"></script>
     <script src="./dist/main.js"></script>
     
 </body>
