--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="menu">
         <hr />
-        <a onclick="newFolder()">
+        <a id="newFolderBtn">
             <i class="fa fa-folder"></i> New Folder <span>Ctrl + ?!</span>
         </a>
         <!-- <hr /> -->
