Add personalized wallpaper feature

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </div>
     </div>
 
+    <input id="wallpaper" type="text" value="enter wallpaper url"></input>
+
     <div id="menu">
         <hr />
         <a id="newFolderBtn">
@@ -34,6 +36,8 @@
 
     <script src="src/folder.js"></script>
     <script src="src/folderModal.js"></script>
+    <script src="src/BFO.js"></script>
+    <script src="src/background.js"></script>
     <script src="./dist/main.js"></script>
     
 </body>
