Update background feature

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         </div>
     </div>
 
-    <input id="wallpaper" type="text" value="enter wallpaper url"></input>
+    <input id="wallpaper" type="text" value="enter wallpaper url" style="display: none;"></input>
 
     <div id="menu">
         <hr />
         <a id="newFolderBtn">
             <i class="fa fa-folder"></i> New Folder <span>Ctrl + ?!</span>
+        </a>
+        <a>
+            <div onclick="wallpaperInput()">Change Wallpaper</div>
         </a>
         <!-- <hr /> -->
     </div>
