--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div id="folder-name">
             <input id="input" type="text" name="modal" value="New Folder" onchange="renameFolder(document.getElementById('input'))" title = "0"
-                style="background-color: transparent; border: none; font-size: 12px;">
+                style="background-color: transparent; border: none; font-size: 12px; color: white; text-shadow: 1px 1px black;">
         </div>
     </div>
 
