Delete folder dropdown

--- a/index.html
+++ b/index.html
@@ -37,11 +37,20 @@
         <!-- <hr /> -->
     </div>
 
+    <div id="deleteDD">
+        <hr />
+        <a id="deleteFolderBtn">
+            <i class="fa fa-folder"></i> Delete Folder <span>Ctrl + ?!</span>
+        </a>
+        <!-- <hr /> -->
+    </div>
+
     <script src="src/folder.js"></script>
     <script src="src/folderModal.js"></script>
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
     <script src="./dist/main.js"></script>
+    <!-- <script src="src/indexedDB.js"></script> -->
     
 </body>
 
