Resize right click dropdowns

--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
     <div id="menu">
         <hr />
         <a id="newFolderBtn">
-            <i class="fa fa-folder"></i> New Folder <span>Ctrl + ?!</span>
+            <i class="fa fa-folder-plus"></i> New Folder <span></span>
         </a>
         <a>
             <div onclick="wallpaperInput()">Change Wallpaper</div>
         </a>
-        <!-- <hr /> -->
+        <hr />
     </div>
 
     <div id="deleteDD">
         <hr />
         <a id="deleteFolderBtn">
-            <i class="fa fa-folder"></i> Delete Folder <span>Ctrl + ?!</span>
+            <i class="fa fa-folder-minus"></i> Delete Folder <span></span>
         </a>
-        <!-- <hr /> -->
+        <hr />
     </div>
 
     <script src="src/folder.js"></script>
