Detect folders beneath folder that being dragged or dropped

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <title>First Brief</title>
+    <meta charset="UTF-8">
     <script src="https://unpkg.com/lodash@4.16.6"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
     <script src="https://kit.fontawesome.com/23417f50bc.js"></script>
 </head>
 
 <body>
-    <div id="folder">
+    <div id="folder" class="droppable">
         <div id="folder-itself">
             <!-- <img class="image" src="https://p1.hiclipart.com/preview/823/364/42/folder-replacement-yellow-folder-icon-png-clipart.jpg" style="max-width: 100%"> -->
             <!-- <img class="image" src="https://p1.hiclipart.com/preview/165/502/502/next-folders-icon-desktop-blue-folder-icon-png-clipart.jpg" style="max-width: 100%"> -->
