--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </div>
 
     <script src="src/folder.js"></script>
+    <!-- <script src="src/folder_copy.js"></script> -->
     <script src="src/folderModal.js"></script>
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
