--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <hr />
     </div>
 
-    <!-- <script src="src/folder.js"></script> -->
-    <script src="src/folder_copy.js"></script>
+    <script src="src/folder.js"></script>
+    <!-- <script src="src/folder_copy.js"></script> -->
     <script src="src/folderModal.js"></script>
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
