--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
      <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
         onreadystatechange="if (this.readyState === 'complete') this.onload()">
         </script>
+    <script src="src/file.js"></script>
     <script src="src/folder.js"></script>
     <!-- <script src="src/folder_copy.js"></script> -->
     <script src="src/folderModal.js"></script>
