--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    </div>
+
     <!-- <p>Drive API My Desktop</p> -->
     
     <!--Add buttons to initiate auth sequence and sign out-->
@@ -58,6 +64,7 @@
     <script src="src/folder.js"></script>
     <!-- <script src="src/folder_copy.js"></script> -->
     <script src="src/folderModal.js"></script>
+    <script src="src/nav.js"></script>
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
     <script src="src/first_folder.js"></script>
