--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <script src="https://unpkg.com/lodash@4.16.6"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
-    <script src="https://kit.fontawesome.com/23417f50bc.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/23417f50bc.js"></script> -->
 </head>
 
 <body>
@@ -68,8 +68,8 @@
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
     <script src="src/first_folder.js"></script>
+    <script type="module" src="src/uploadData.js"></script>
     <script src="./dist/main.js"></script>
-    <!-- <script src="src/indexedDB.js"></script> -->
     
 </body>
 
