--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     <script src="src/BFO.js"></script>
     <script src="src/background.js"></script>
     <script src="src/first_folder.js"></script>
-    <script type="module" src="src/uploadData.js"></script>
+    <!-- <script src="src/require.js"></script> -->
+    <!-- <script data-main="src/app.js" src="src/uploadData.js"></script> -->
     <script src="./dist/main.js"></script>
     
 </body>
