fix undefined varible error

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         </div>
     </div>
 
-    <input id="wallpaper" type="text" value="enter wallpaper url" style="display: none;"></input>
+    <div id="wallpaper-parent">
+        <input id="wallpaper" type="text" value="enter wallpaper url" style="display: none;"></input>
+    </div>
 
     <div id="menu">
         <hr />
