--- a/index.html
+++ b/index.html
@@ -25,19 +25,12 @@
     
     <pre id="content" style="white-space: pre-wrap;"></pre>
 
-    <div id="folder" class="droppable">
-        <div id="folder-itself">
-            <img class="image" src="http://icon-park.com/imagefiles/folder_icon_yellow.png" style="max-width: 100%">
-        </div>
-        <div id="folder-name">
-            <input id="input" type="text" name="modal" value="New Folder" onchange="renameFolder(document.getElementById('input'))" title = "0"
-                style="background-color: transparent; border: none; font-size: 12px; color: white; text-shadow: 1px 1px black;">
-        </div>
-    </div>
-
     <div id="wallpaper-parent">
         <input id="wallpaper" type="text" value="enter wallpaper url" style="display: none;"></input>
     </div>
+
+    <!-- for separate windows -->
+    <!-- <div id="myModal" class="modal"></div> -->
 
     <div id="menu">
         <hr />
@@ -64,7 +57,6 @@
         </script>
     <script src="src/file.js"></script>
     <script src="src/folder.js"></script>
-    <!-- <script src="src/folder_copy.js"></script> -->
     <script src="src/folderModal.js"></script>
     <script src="src/nav.js"></script>
     <script src="src/BFO.js"></script>
