--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
         <hr />
     </div>
 
+    <div id="welcome-modal" class="modal">
+        <div class="modal-content">Welcome to (your) myDesktop: a desktop for Google Drive! Treat this as you would any would your desktop for your operation system. (Right-click!) </div>
+    </div>
+
     <script src="src/BFO.js"></script>
     <script src="src/uploadData.js"></script>
     <script src="src/driveAPI.js"></script>
      <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
         onreadystatechange="if (this.readyState === 'complete') this.onload()">
         </script>
-    <!-- <script src="bundle.js"></script> -->
     <script src="src/file.js"></script>
     <script src="src/folder.js"></script>
     <script src="src/folderModal.js"></script>
