Update: recursive delete, children property etc.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
     </div>
 
     <div id="welcome-modal" class="modal">
-        <div class="modal-content">Welcome to (your) myDesktop: a desktop for Google Drive! Treat this as you would any would your desktop for your operation system. (Right-click!) </div>
+        <div class="modal-content" style="overflow: scroll">
+            Welcome to (your) myDesktop: a desktop for Google Drive!  
+            <br/>
+            <iframe src="https://share.getcloudapp.com/mXuqB7D8?embed=true" width="560" height="300" style="border:none"
+                frameborder="0" allowtransparency="true" > </iframe>
+            <br />
+            
+            Use it like any other desktop.
+            <br/>
+            <img class="image" src="https://i.chzbgr.com/full/8499727872/h1DE421D2/spongebob-akira-mash-up">
+            <br />
+            (Right-click!)
+            <br/>
+            <img class="image" src="https://i.chzbgr.com/full/8499727872/h1DE421D2/spongebob-akira-mash-up">
+        </div>
     </div>
 
     <script src="src/BFO.js"></script>
@@ -62,6 +76,7 @@
      <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
         onreadystatechange="if (this.readyState === 'complete') this.onload()">
         </script>
+    <script src="src/recursive_delete.js"></script>
     <script src="src/file.js"></script>
     <script src="src/folder.js"></script>
     <script src="src/folderModal.js"></script>
