add delete file functionality and styling

--- a/index.html
+++ b/index.html
@@ -52,21 +52,25 @@
         <hr />
     </div>
 
+    <div id="deleteFileDD">
+        <hr />
+        <a id="deleteFileBtn">
+            <i class="fa fa-folder-minus"></i> Delete File <span></span>
+        </a>
+        <hr />
+    </div>
+
     <div id="welcome-modal" class="modal">
         <div class="modal-content" style="overflow: scroll">
+            <span id=${close} class="close" style="margin-right: 6.5px">&times;</span>
             Welcome to (your) myDesktop: a desktop for Google Drive!  
             <br/>
-            <iframe src="https://share.getcloudapp.com/mXuqB7D8?embed=true" width="560" height="300" style="border:none"
-                frameborder="0" allowtransparency="true" > </iframe>
-            <br />
-            
             Use it like any other desktop.
             <br/>
-            <img class="image" src="https://i.chzbgr.com/full/8499727872/h1DE421D2/spongebob-akira-mash-up">
+           (Click on the three bars to access drive files)
             <br />
-            (Right-click!)
-            <br/>
-            <img class="image" src="https://i.chzbgr.com/full/8499727872/h1DE421D2/spongebob-akira-mash-up">
+            <iframe src="https://share.getcloudapp.com/mXuqB7D8?embed=true" width="560" height="300" style="border:none"
+                frameborder="0" allowtransparency="true"> </iframe>
         </div>
     </div>
 
