Add create new file and delete file functionality plus clean up

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <a id="newFolderBtn">
             <i class="fa fa-folder-plus"></i> New Folder <span></span>
         </a>
+        <a id="newFileBtn">
+            <i class="fa fa-folder-plus"></i> New File <span></span>
+        </a>
         <a>
             <div onclick="wallpaperInput()">Change Wallpaper</div>
         </a>
