Display greeting before authorization

--- a/index.html
+++ b/index.html
@@ -69,11 +69,13 @@
             Welcome to (your) myDesktop: a desktop for Google Drive!  
             <br/>
             Use it like any other desktop.
-            <br/>
-           (Click on the three bars to access drive files)
             <br />
             <iframe src="https://share.getcloudapp.com/mXuqB7D8?embed=true" width="560" height="300" style="border:none"
                 frameborder="0" allowtransparency="true"> </iframe>
+            <br />
+            Click on the three bars to access drive files.
+            <br />
+            Authorize to gain functionality!
         </div>
     </div>
 
