Add still in dev message to greeting

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <div id="welcome-modal" class="modal">
         <div class="modal-content" style="overflow: scroll">
             <span id=${close} class="close" style="margin-right: 6.5px">&times;</span>
+            !!! SAVED DATA WAS RESET / STILL IN DEVELOPMENT !!!
+            <br />
             Welcome to (your) myDesktop: a desktop for Google Drive!  
             <br/>
             Use it like any other desktop.
